// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodeOptions renders correctly 1`] = `
<div class="options-button">
  <more-icon-stub></more-icon-stub>
  <!---->
</div>
`;

exports[`NodeOptions renders correctly 2`] = `
<div class="options-button">
  <more-icon-stub></more-icon-stub>
  <div class="options">
    <div class="options__item">Copy Node ID</div>
    <delete-node-stub nodeid="id"></delete-node-stub>
    <update-name-stub nodeid="id"></update-name-stub>
  </div>
</div>
`;
